<resources>
    <string name="app_name">Messenger</string>
    <string name="avatar_image_view_content_description">Avatar Image View</string>
    <string name="nickname_edit_text_hint">Enter your nickname</string>
    <string name="password_edit_text_hint">Enter your password</string>
    <string name="what_i_do_edit_text_hint">What I do</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="not_registered_text_view_text">Not registered?</string>
    <string name="search_edit_text_hint">Search</string>
    <string name="add_floating_action_button_content_description">Add Floating Action Button</string>
    <string name="homepage_image_button_content_description">Homepage Image Button</string>
    <string name="profile_image_button_content_description">Profile Image Button</string>
    <string name="short_chat_nickname_text_view_default_text">Saba Tsertsvadze</string>
    <string name="short_chat_last_message_text_view_default_text">On my way home but i need to stop by the book store to…</string>
    <string name="short_chat_last_message_time_text_view_default_text">5 min</string>
    <string name="avatar_image_button_content_description">Avatar Image Button</string>
    <string name="profile_nickname_edit_text_default_text">Sayed Eftiaz</string>
    <string name="profile_occupation_edit_text_default_text">Manager</string>
    <string name="profile_update_button_text">Update</string>
    <string name="profile_sign_out_button_text">SIGN OUT</string>
    <string name="back_image_button_content_description">Back Image Button</string>
    <string name="chat_nickname_text_view_default_text">Sayed Eftiaz</string>
    <string name="chat_occupation_text_view_default_text">Manager</string>
    <string name="message_text_view_default_text">That ways we dont be able to give any advice. Can you do a small work 2–3 hour work of the style guide?</string>
    <string name="message_time_text_view_default_text">12:10</string>
    <string name="message_edit_text_hint">Message</string>
    <string name="user_nickname_text_view_default_text">Tour de Bhutan</string>
    <string name="user_occupation_text_view_default_text">Manager</string>
</resources>
