<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".homepage.HomepageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height"
        android:background="@color/status_bar_color"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_background"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/status_bar_color"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/toolbar_margin_bottom"
                app:layout_collapseMode="pin">

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_edit_text_layout_height"
                    android:layout_marginStart="@dimen/search_edit_text_margins"
                    android:layout_marginEnd="@dimen/search_edit_text_margins"
                    android:layout_marginBottom="@dimen/search_edit_text_margins"
                    android:background="@drawable/search_edit_text_background"
                    android:backgroundTint="@color/search_edit_text_background_color"
                    android:drawableStart="@drawable/ic_baseline_search_24"
                    android:hint="@string/search_edit_text_hint"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/search_edit_text_paddings"
                    android:paddingEnd="@dimen/search_edit_text_paddings"
                    android:textColorHint="@color/search_color" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/add_floating_action_button_margin"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/add_floating_action_button_content_description"
        app:backgroundTint="@color/button_background_color"
        app:layout_anchor="@id/bottomAppBar"
        app:tint="@android:color/white" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        app:contentInsetStart="@dimen/bottom_app_bar_content_inset_start"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/homepageImageButton"
                android:layout_width="@dimen/bottom_app_bar_icon_size"
                android:layout_height="@dimen/bottom_app_bar_icon_size"
                android:background="@drawable/ic_baseline_home_24"
                android:backgroundTint="@color/button_background_color"
                android:contentDescription="@string/homepage_image_button_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/separatorView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:id="@+id/separatorView"
                android:layout_width="@dimen/bottom_app_bar_separator_size"
                android:layout_height="@dimen/bottom_app_bar_separator_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/profileImageButton" />

            <ImageButton
                android:id="@+id/profileImageButton"
                android:layout_width="@dimen/bottom_app_bar_icon_size"
                android:layout_height="@dimen/bottom_app_bar_icon_size"
                android:background="@drawable/ic_baseline_settings_24"
                android:backgroundTint="@color/unselected_button_background_color"
                android:contentDescription="@string/profile_image_button_content_description"
                android:onClick="profileImageButtonClicked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/separatorView"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
